# adk-mailing

./: .env.example  GEMINI.md  README.md  architecture.md  docker-compose.yml  main.py  pyproject.toml  secure_tasks.md  tasks.md  user-stories.md
app/: main.py
app/agents/: copywriter.py
app/api/: endpoints.py
app/core/: config.py
app/db/: database.py  schema.sql
app/services/: clustering.py  orchestrator.py
data/: g2_campana_email.csv
outputs/: ultimo_reporte.txt
scripts/: run_e2e.py  seed_data.py
tests/: test_clustering.py  test_copywriter.py  test_db.py  test_orchestrator.py  test_seed.py
